--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>V-Day.exe | Besties Only</title>
+  <title>KUPAL KABA BOSS?</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Bungee&family=Courier+Prime:wght@700&display=swap');
 
